syntax = "proto3";

package users;

option go_package = "go-starter-app/pkg/pb;pb";

message User {
	int32 id = 1;
	string name = 2;
	string email = 3;
}

message ListUsersRequest {}

message ListUsersResponse {
	repeated User users = 1;
}

service UsersService {
	rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}


